# Coop_Resume_Agent

./: .gitignore  AGENTS.md  pyproject.toml
data/samples/: config.sample.yaml  experience_bank_technology_keywords.json  raw_experience_note.sample.txt
prompts/: cover_letter_writer.system.md  cover_letter_writer.user.md  experience_structurer.system.md  experience_structurer.user.md  jd_analysis.system.md  jd_analysis.user.md
resume_agent/: __init__.py  ai_client.py  cli.py  config.py  cover_letter.py  cover_letter_ai.py  cover_letter_draft.py  jd.py  mock_ai.py  mock_resume_strategy.py  openai_jd_analysis.py  resume_inventory.py  storage.py
resume_agent/ai/: __init__.py  model_router.py
resume_agent/experience_bank/: __init__.py  ai_structurer.py  cli.py  config.py  evidence.py  grounding.py  ingestion.py  openai_provider.py  pipeline.py  preprocessor.py  schema.py  storage.py  structurer.py  supplement.py  validator.py
templates/: cover_letter.tex.j2
tests/: test_cli_experience_dispatch.py  test_cli_interrupt.py  test_cli_resume_selection.py  test_cover_letter.py  test_cover_letter_ai.py  test_cover_letter_draft.py  test_jd_analysis_ai.py  test_mock_resume_strategy.py  test_model_router.py  test_resume_inventory.py  test_storage.py
tests/experience_bank/: __init__.py  test_ai_structurer.py  test_cli.py  test_evidence.py  test_ingestion.py  test_openai_provider.py  test_pipeline.py  test_preprocessor.py  test_review_workflow.py  test_storage.py  test_supplement.py  test_validator.py
